--- a/dado.html
+++ b/dado.html
@@ -217,7 +217,7 @@
         // === CONFIGURAÇÃO IP DA API (CRUCIAL) ===
         // =======================================================
         // Seu site buscará dados neste endereço (ESP32)
-        const ESP32_API_URL = 'http://192.168.1.14/data'; 
+        const ESP32_API_URL = 'http://127.0.0.1:4040'; 
         
         // Mobile menu functionality
         const mobileMenuBtn = document.getElementById('mobile-menu-btn');
@@ -335,4 +335,5 @@
     </script>
 
 </body>
+
 </html>
