--- a/dado.html
+++ b/dado.html
@@ -217,7 +217,7 @@
         // === CONFIGURAÇÃO IP DA API (CRUCIAL) ===
         // =======================================================
         // Seu site buscará dados neste endereço (ESP32)
-        const ESP32_API_URL = 'http://127.0.0.1:4040'; 
+       const ESP32_API_URL = 'https://unequalled-hipolito-overbulkily.ngrok-free.app/data';
         
         // Mobile menu functionality
         const mobileMenuBtn = document.getElementById('mobile-menu-btn');
@@ -337,3 +337,4 @@
 </body>
 
 </html>
+
