Update print statement from 'Hello' to 'Goodbye'

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -67,7 +67,7 @@
                 <div class="flex items-center space-x-2 sm:space-x-3">
                     <div>
                         <h1 class="text-xl sm:text-2xl font-bold text-gray-900">Alerta Recife</h1>
-                        <p class="text-xs sm:text-sm text-gray-500">Sistema de Deteção</p>
+                        <p class="text-xs sm:text-sm text-gray-500">Sistema de Detecção</p>
                     </div>
                 </div>
                 <button class="lg:hidden text-gray-600 hover:text-gray-900 p-2" onclick="toggleMobileSidebar()">
@@ -245,7 +245,7 @@
                 <div class="bg-gradient-to-br from-secondary/5 to-secondary/10 rounded-xl sm:rounded-2xl p-4 sm:p-5 md:p-6 border border-secondary/20">
                     <div class="flex items-center justify-between mb-2 sm:mb-3">
                         <i class="fa-solid fa-exclamation-circle text-2xl sm:text-3xl lg:text-4xl text-secondary"></i>
-                        <span class="text-xs sm:text-sm font-semibold text-secondary bg-secondary/10 px-2 sm:px-3 py-1 rounded-full">MÃ©dio</span>
+                        <span class="text-xs sm:text-sm font-semibold text-secondary bg-secondary/10 px-2 sm:px-3 py-1 rounded-full">Médio</span>
                     </div>
                     <h4 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-gray-900 mb-1">47</h4>
                     <p class="text-xs sm:text-sm text-gray-600">Acidentes Moderados</p>
@@ -310,7 +310,7 @@
                     height: null,
                 },
                 title: {
-                    text: 'Acidentes nas Ãšltimas 24 Horas',
+                    text: 'Acidentes nas Últimas 24 Horas',
                     align: 'left',
                     style: {
                         color: '#1F2937',
@@ -319,7 +319,7 @@
                     }
                 },
                 subtitle: {
-                    text: 'DetecÃ§Ã£o automÃ¡tica em tempo real',
+                    text: 'Detecção automática em tempo real',
                     align: 'left',
                     style: {
                         color: '#6B7280',
@@ -343,7 +343,7 @@
                 },
                 yAxis: {
                     title: {
-                        text: isMobile ? 'OcorrÃªncias' : 'Número de Ocorrências',
+                        text: isMobile ? 'Ocorrências' : 'Número de Ocorrências',
                         style: {
                             color: '#6B7280',
                             fontSize: isMobile ? '10px' : isTablet ? '11px' : '13px',
@@ -572,5 +572,6 @@
 
 </body>
 </html>
+
 
 
